--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,10 @@ body {
     background-image: url("../images/background-img.jpg");
 }
 
+p {
+    font-weight: bold;
+}
+
 h2 {
     color:orangered;
 }
