--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,11 @@
 body {
     background-color: lightgray;
     background-image: url("../images/background-img.jpg");
+    background-size: cover;
 }
 
 p {
     font-weight: bold;
-}
-
-h2 {
-    color:orangered;
 }
 
 .text-center {
